Colocando os Fundos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div></div>
 </head>
 <body>
-    
+    <a href="historia.html">bhx</a>
+    <a href="historiavnl.html">ytrer</a>
+    <a href="historiaoly.html">erxc</a>
 </body>
 </html>
